--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Ilse's Personal Site</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 </html>
 
@@ -22,7 +23,7 @@
     <hr>
     
     <h3>Work experience</h3>
-    <table cellspacing="10" class="experience">
+    <table cellspacing="3" class="experience">
         <thead>
             <tr>
                 <th>Date</td>
