--- a/contact-me.html
+++ b/contact-me.html
@@ -2,6 +2,7 @@
 <head>
     <title>Contact us</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
