--- a/hobbies.html
+++ b/hobbies.html
@@ -2,6 +2,7 @@
 <head>
     <title>My hobbies</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
